--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Una Giornata al Museo</title>
 </head>
 <body>
+    <header>
+        <h1> Una giornata al museo</h1>
+    </header>
     
 </body>
 </html>
