first ol section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
     <header>
         <h1> Una giornata al museo</h1>
     </header>
+    <main>
+        <section>
+            <ol>
+                <li>
+                    <h2>Il dipinto che mi ha colpito di più</h2>
+                    <figure>
+                        <img src="./img/quadro.png" alt="quadro">
+                        <figcaption>Un'opera d'arte affascinante vista nella galleria principale.</figcaption>
+                    </figure>
+                </li>
+            </ol>
+        </section>
+    </main>
     
 </body>
 </html>
