--- a/index.html
+++ b/index.html
@@ -11,15 +11,20 @@
     </header>
     <main>
         <section>
-            <ol>
-                <li>
-                    <h2>Il dipinto che mi ha colpito di più</h2>
-                    <figure>
-                        <img src="./img/quadro.png" alt="quadro">
-                        <figcaption>Un'opera d'arte affascinante vista nella galleria principale.</figcaption>
-                    </figure>
-                </li>
-            </ol>
+                <h2>1. Il dipinto che mi ha colpito di più</h2>
+                <figure>
+                    <img src="./img/quadro.png" alt="quadro">
+                     <figcaption>Un'opera d'arte affascinante vista nella galleria principale.</figcaption>
+                </figure>
+                    <span> Questo dipinto mi ha catturato per i suoi colori intensi e per l'espressione del volto del personaggio raffigurato. E come se raccontasse una storia senza parole.</span>
+        </section>
+        <section>
+            <h2>2. Un'antica scultura</h2>
+            <figure>
+                <img src="./img/scultura.png" alt="scultura">
+                <figcaption>Scultura romana in marmo esposta nella sala archeologica.</figcaption>
+            </figure>
+            <span>La scultura era alta quasi due metri e mostrava un antico guerriero romano. I dettagli del viso e dell'armatura erano incredibilmente realistici.</span>
         </section>
     </main>
     
