--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Una Giornata al Museo</title>
 </head>
+
 <body>
+    <!-- header -->
     <header>
         <h1> Una giornata al museo</h1>
     </header>
+    <!-- main -->
     <main>
+        <!-- firts point -->
         <section>
                 <h2>1. Il dipinto che mi ha colpito di più</h2>
                 <figure>
@@ -18,6 +23,7 @@
                 </figure>
                     <span> Questo dipinto mi ha catturato per i suoi colori intensi e per l'espressione del volto del personaggio raffigurato. E come se raccontasse una storia senza parole.</span>
         </section>
+        <!-- second point -->
         <section>
             <h2>2. Un'antica scultura</h2>
             <figure>
@@ -26,6 +32,19 @@
             </figure>
             <span>La scultura era alta quasi due metri e mostrava un antico guerriero romano. I dettagli del viso e dell'armatura erano incredibilmente realistici.</span>
         </section>
+        <!-- learning points -->
+        <section>
+            <h3>Le cose che ho imparato oggi:</h3>
+            <ul>
+                <li>Le statue romane venivano spesso dipinte a colori vivaci</li>
+                <li>Molti dipinti nascondono simboli e significati nascosti</li>
+                <li>Ogni opera ha una storia unica</li>
+            </ul>
+        </section>
+        <!-- footer -->
+        <footer>
+            <small> &copy; 2025 Insegnante di HTML </small>
+        </footer>
     </main>
     
 </body>
