--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Una giornata al museo">
+    <meta name="author" content="Valeria Cristiano">
+    <meta name="keywords" content="meseo, arte, archeologia, storia">
     <title>Una Giornata al Museo</title>
 </head>
 
@@ -12,18 +14,20 @@
     <header>
         <h1> Una giornata al museo</h1>
     </header>
+
     <!-- main -->
     <main>
-        <!-- firts point -->
+        <!-- first section -->
         <section>
-                <h2>1. Il dipinto che mi ha colpito di più</h2>
-                <figure>
-                    <img src="./img/quadro.png" alt="quadro">
-                     <figcaption>Un'opera d'arte affascinante vista nella galleria principale.</figcaption>
-                </figure>
-                    <span> Questo dipinto mi ha catturato per i suoi colori intensi e per l'espressione del volto del personaggio raffigurato. E come se raccontasse una storia senza parole.</span>
+            <h2>1. Il dipinto che mi ha colpito di più</h2>
+            <figure>
+                <img src="./img/quadro.png" alt="quadro">
+                 <figcaption>Un'opera d'arte affascinante vista nella galleria principale.</figcaption>
+            </figure>
+            <span> Questo dipinto mi ha catturato per i suoi colori intensi e per l'espressione del volto del personaggio raffigurato. E come se raccontasse una storia senza parole.</span>
         </section>
-        <!-- second point -->
+
+        <!-- second section -->
         <section>
             <h2>2. Un'antica scultura</h2>
             <figure>
@@ -32,6 +36,7 @@
             </figure>
             <span>La scultura era alta quasi due metri e mostrava un antico guerriero romano. I dettagli del viso e dell'armatura erano incredibilmente realistici.</span>
         </section>
+
         <!-- learning points -->
         <section>
             <h3>Le cose che ho imparato oggi:</h3>
@@ -41,6 +46,7 @@
                 <li>Ogni opera ha una storia unica</li>
             </ul>
         </section>
+
         <!-- footer -->
         <footer>
             <small> &copy; 2025 Insegnante di HTML </small>
